--- a/web/hello.html
+++ b/web/hello.html
@@ -2,12 +2,13 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="css/a1.css"> 
 <style>
 </style>
 
 <title>Hello World</title>
 </head>
 <body>
- <p>Hello World!</p>
+ <p class="center">Hello World!<br>This will be Eli Andrew's Homepage!!</p>
 </body>
 </html>
